# Investing-agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md  pyproject.toml
docs/: index.html
prompts/: analyst.md  daily_pm.md  event_monitor.md  journal_keeper.md  portfolio_manager.md  scout.md  screener.md  trader.md
reports/: 2026-05-24-live.md  2026-05-31-live.md  2026-06-07-live.md  2026-06-14-live.md  2026-06-21-live.md  daily_2026-05-25.md  daily_2026-05-26.md  daily_2026-05-27.md  daily_2026-05-28.md  daily_2026-05-29.md  daily_2026-06-01.md  daily_2026-06-02.md  daily_2026-06-03.md  daily_2026-06-04.md  daily_2026-06-05.md  daily_2026-06-08.md  daily_2026-06-09.md  daily_2026-06-10.md  daily_2026-06-11.md  daily_2026-06-12.md  daily_2026-06-15.md  daily_2026-06-16.md  daily_2026-06-17.md  daily_2026-06-18.md  daily_2026-06-19.md  daily_2026-06-22.md  daily_2026-06-23.md  daily_2026-06-24.md  daily_2026-06-25-dryrun.md  daily_2026-06-25.md  daily_2026-06-26.md  daily_2026-06-29.md  daily_2026-06-30.md  daily_2026-07-01.md  deep_2026-06-27.md
scripts/: init_portfolio.py  smoke_test_email.py  smoke_test_insiders.py  smoke_test_prices.py
src/: claude_client.py  config.py  contexts.py  dashboard.py  issuer_match.py  json_parse.py  metrics.py  pace.py  pipeline.py  pipeline_daily.py  pipeline_weekly.py  portfolio.py  reporting.py  risk.py  universe.py
state/: issuer_aliases.yaml  news_aliases.yaml  portfolio.json  theses.md  universe.yaml
tests/: test_benchmark.py  test_borsdata_insiders.py  test_fundamentals_calendar.py  test_fx.py  test_risk.py  (+5 more)
(+561 files in other folders)
