[project]
name = "investing-agent"
version = "0.1.0"
description = "Autonomous AI-driven Swedish stock research and paper-trading agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
